{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 80,
  "lineage": "dd3c44ca-c4b8-bc4b-d93e-a28e0d266096",
  "resources": [
    {
      "module": "module.ec2_complete",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad554caf874569d2",
            "arn": "arn:aws:ec2:us-east-1:302263043236:instance/i-0b8467810a6c950ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-20240827163220383200000002",
            "id": "i-0b8467810a6c950ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ex-myapp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0282edcba8442ea56",
            "private_dns": "ip-10-0-48-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.48.82",
            "public_dns": "ec2-3-80-219-99.compute-1.amazonaws.com",
            "public_ip": "3.80.219.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:302263043236:key/9f460d0d-bd33-4490-82e9-129fefd78dea",
                "tags": {
                  "Name": "my-root-block"
                },
                "tags_all": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-0e0cb2be9a1085629",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0456fa8f45a35bb60",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06d15ad7235843dc6"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.ec2_complete.aws_iam_instance_profile.this",
            "module.ec2_complete.aws_iam_role.this",
            "module.ec2_complete.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_complete.data.aws_partition.current",
            "module.ec2_complete.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jump_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad554caf874569d2",
            "arn": "arn:aws:ec2:us-east-1:302263043236:instance/i-04681a39beea62934",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansi_terra-20240827164652041000000002",
            "id": "i-04681a39beea62934",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ex-myapp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0881012a5f364ba4d",
            "private_dns": "ip-10-0-48-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.48.88",
            "public_dns": "ec2-184-73-21-71.compute-1.amazonaws.com",
            "public_ip": "184.73.21.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:302263043236:key/9f460d0d-bd33-4490-82e9-129fefd78dea",
                "tags": {
                  "Name": "my-root-block"
                },
                "tags_all": {
                  "Name": "my-root-block"
                },
                "throughput": 200,
                "volume_id": "vol-09cb26dbb6c9e6348",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0456fa8f45a35bb60",
            "tags": {
              "Name": "ansi_terra"
            },
            "tags_all": {
              "Name": "ansi_terra"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06d15ad7235843dc6"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.ec2_jump_server.aws_iam_instance_profile.this",
            "module.ec2_jump_server.aws_iam_role.this",
            "module.ec2_jump_server.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_jump_server.data.aws_partition.current",
            "module.ec2_jump_server.data.aws_ssm_parameter.this",
            "module.key_pair.aws_key_pair.this",
            "module.key_pair.tls_private_key.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:security-group/sg-06d15ad7235843dc6",
            "description": "Security group for example usage with EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d15ad7235843dc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPV4 ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ex-myapp-20240827143041602200000008",
            "name_prefix": "ex-myapp-",
            "owner_id": "302263043236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2497015538",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d15ad7235843dc6",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3350874167",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d15ad7235843dc6",
            "security_group_rule_id": "sgr-0546fe8539bbdab0c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-2787868071",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-06d15ad7235843dc6",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:network-acl/acl-056899a1ba7b87591",
            "default_network_acl_id": "acl-056899a1ba7b87591",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-056899a1ba7b87591",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "302263043236",
            "subnet_ids": [
              "subnet-043f3789ff8565cbd",
              "subnet-0456fa8f45a35bb60",
              "subnet-04624d7131d4ed8b6",
              "subnet-07e4680031d2ee998",
              "subnet-09ed37e8471611552",
              "subnet-0c7dd28249253ba01"
            ],
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:route-table/rtb-05d971763248b575b",
            "default_route_table_id": "rtb-05d971763248b575b",
            "id": "rtb-05d971763248b575b",
            "owner_id": "302263043236",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:security-group/sg-021601a7e388d85c8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-021601a7e388d85c8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "302263043236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:internet-gateway/igw-0c629156f877de174",
            "id": "igw-0c629156f877de174",
            "owner_id": "302263043236",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c629156f877de174",
            "id": "r-rtb-0de65638abc14a5421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de65638abc14a542",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:route-table/rtb-0b83dec57296fe176",
            "id": "rtb-0b83dec57296fe176",
            "owner_id": "302263043236",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:route-table/rtb-02ac0d944c56aa554",
            "id": "rtb-02ac0d944c56aa554",
            "owner_id": "302263043236",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:route-table/rtb-0dca55925eb0778c2",
            "id": "rtb-0dca55925eb0778c2",
            "owner_id": "302263043236",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:route-table/rtb-0de65638abc14a542",
            "id": "rtb-0de65638abc14a542",
            "owner_id": "302263043236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c629156f877de174",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47bffbc5dd1d3d3",
            "route_table_id": "rtb-0b83dec57296fe176",
            "subnet_id": "subnet-07e4680031d2ee998"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0993476d0b3c711a4",
            "route_table_id": "rtb-02ac0d944c56aa554",
            "subnet_id": "subnet-0c7dd28249253ba01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae38a76488e5dfd4",
            "route_table_id": "rtb-0dca55925eb0778c2",
            "subnet_id": "subnet-043f3789ff8565cbd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bcbe7ad9fb96e5e",
            "route_table_id": "rtb-0de65638abc14a542",
            "subnet_id": "subnet-0456fa8f45a35bb60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f9582b4fab999f",
            "route_table_id": "rtb-0de65638abc14a542",
            "subnet_id": "subnet-04624d7131d4ed8b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4bfdf38d286609",
            "route_table_id": "rtb-0de65638abc14a542",
            "subnet_id": "subnet-09ed37e8471611552"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:subnet/subnet-07e4680031d2ee998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e4680031d2ee998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263043236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:subnet/subnet-0c7dd28249253ba01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7dd28249253ba01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263043236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:subnet/subnet-043f3789ff8565cbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f3789ff8565cbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263043236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:subnet/subnet-0456fa8f45a35bb60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0456fa8f45a35bb60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263043236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:subnet/subnet-04624d7131d4ed8b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04624d7131d4ed8b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263043236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:subnet/subnet-09ed37e8471611552",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed37e8471611552",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263043236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-03a3a0d0d0bfb1a8f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263043236:vpc/vpc-03a3a0d0d0bfb1a8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056899a1ba7b87591",
            "default_route_table_id": "rtb-05d971763248b575b",
            "default_security_group_id": "sg-021601a7e388d85c8",
            "dhcp_options_id": "dopt-0dbca1eb587901438",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a3a0d0d0bfb1a8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d971763248b575b",
            "owner_id": "302263043236",
            "tags": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-myapp",
              "Name": "ex-myapp",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}